@@ -1,0 +1,2 @@
+--- !abc
+foo: 1
